# cuckoo-filter

./: .clang-tidy  .gitignore  .gitlab-ci.yml  Doxyfile  Doxyfile.in  README.md  benchmark_results_bucketSize.csv  flake.nix  meson.build  meson.options  mogon_env.sh  mogon_jobscript.sh  spack.yaml
benchmark/: benchmark_common.cuh  cache_benchmark.cu  cuckoo_bucket_size.cu  cuckoo_cpu_vs_gpu.cu  cuckoo_ipc_overhead.cu  cuckoo_single_vs_multi_gpu.cu  cuckoo_sorted_vs_unsorted.cu  cuckoo_vs_bloom.cu  cuckoo_vs_gqf.cu  cuckoo_vs_partitioned.cu  cuckoo_vs_tcf.cu  eviction_benchmark.cu  fpr_benchmark.cu  fpr_sweep_benchmark.cu  kmer_benchmark.cu  load_factor_benchmark.cu  load_width_benchmark.cu  multi_gpu_scaling_benchmark.cu  profiler_benchmark.cu
include/: BucketsTableGpu.cuh  CuckooFilter.cuh  CuckooFilterIPC.cuh  CuckooFilterMultiGPU.cuh  bucket_policies.cuh  common.cuh  hash_strategies.cuh  helpers.cuh
scripts/: benchmark_utils.py  convert_kmers_to_binary.py  download_genomes.sh  extract_kmers.sh  mogon_env.sh  mogon_jobscript.sh  ncu_profiler.py  plot.sh  plot_bucket_size.py  plot_cache_benchmark.py  plot_eviction.py  plot_fpr.py  plot_fpr_sweep.py  plot_kmer.py  plot_load_factor.py  plot_load_width.py  plot_memory.py  plot_multi_gpu_scaling.py  plot_performance.py  plot_runtime.py  plot_sol_benchmark.py  plot_sorted_vs_unsorted.py  plot_throughput.py  plot_utils.py  run_cache_benchmark.py  run_fpr_sweep.py  run_kmer_benchmark.py  run_load_width_benchmark.py  run_multi_gpu_scaling.py
src/: BucketsTableCpu.cuh  BucketsTableGpu.cuh  HybridTable.cuh  NaiveTable.cuh  benchmark_buckets.cu  gossip_test.cu  ipc_main.cu  ipc_server_main.cu  main.cu  multi_gpu_main.cu
subprojects/: moderngpu.wrap  quotient-filters.wrap
subprojects/packagefiles/: gqf-atomicCAS.patch  gqf-hash-rename.patch  gqf-macros.patch  gqf-memory-leak.patch  gqf-print.patch  gqf-rbits-macro.patch  quotient-filters.patch
tests/: test_cuckoo_filter.cu
